# Middleware

./: CMakeLists.txt  IPC_Serial.pro  README.md  config.h.in
src/: COBSTool.cpp  COBSTool.h  DataLinkLayer.cpp  DataLinkLayer.h  Msg2MCUhandler.cpp  Msg2MCUhandler.h  MsgQueue.cpp  MsgQueue.h  SerialServer.cpp  SerialServer.h  SerialServer.xml  TLVtools.cpp  TLVtools.h  TransportLayer.cpp  TransportLayer.h  common.cpp  common.h  demo.cpp  serial.cpp  serial.h  taskManager.cpp  taskManager.h
src/gdbus/: CMakeLists.txt  ServiceOfSerial.c  ServiceOfSerial.h
src/qdbus/: CMakeLists.txt  moc_SerialServer.cpp
